How To upload existing project to git hub

--- a/readme
+++ b/readme
@@ -3,3 +3,8 @@
 
 3. application may run on any port, try below url with new port :
 http://localhost:59527/getEmployeeList
+
+
+
+HOW TO UPLOAD EXISITNG PROJECT TO GIT HUB :
+https://www.google.com/search?sxsrf=ACYBGNRWbtok14um5Q4VJS-U7GIVVWVt8A%3A1568003406231&ei=TtV1XdjkDYzsvgSL5rKIBg&q=upload+existing+project+to+github+via+intellij&oq=upload+existing+project+to+github+via+inte&gs_l=psy-ab.3.0.33i22i29i30.102186.106644..109021...0.2..0.170.1210.0j9......0....1..gws-wiz.......0i71j0j0i22i30j33i160.-mm5JEwgaNo#kpvalbx=_vNV1XduoNJCuvwTsxaaQDw23
